# TRT-YOLOv8-Seg

./: .gitignore  2q  CMakeLists.txt  Makefile  README.md  copyImages.py  main.cpp  pstack.sh  v8trans.py
doc/: 1.trans_model.md
example/: color_lable.hpp  mysql_test.cpp  test_http_server.cpp  test_mysql.cpp  test_video_pusher.cpp  test_yolov8_seg.cpp
src/: loadConfig.hpp  moudle.cpp
src/HttpServer/: CMakeLists.txt  http_server.cpp  http_server.hpp
src/SqlWarpper/: CMakeLists.txt  lock.h  mysql.cpp  mysql.h  noncopyable.h  singleton.h
src/TrtLib/builder/: CMakeLists.txt  trt_builder.cpp  trt_builder.hpp
src/TrtLib/common/: CMakeLists.txt  cuda_tools.cu  cuda_tools.cuh  ilogger.cpp  ilogger.hpp  infer_controller.hpp  json.hpp  monopoly_allocator.hpp  preprocess_kernel.cu  preprocess_kernel.cuh  trt_tensor.cpp  trt_tensor.hpp
src/TrtLib/infer/: CMakeLists.txt  trt_infer.cpp  trt_infer.hpp
src/VideoPusher/: CMakeLists.txt  clipp.h  rtsp2flv.cpp  rtsp2flv.hpp
src/WebSocket/: CMakeLists.txt  asio_compatibility.hpp  client_ws.hpp  client_wss.hpp  server_ws.hpp  server_wss.hpp
src/YOLOv8Seg/: CMakeLists.txt  decoder_kernel.cu  decoder_kernel.cuh  segment.hpp  yolov8_seg.cpp  yolov8_seg.hpp
workspace/media/: calibration.cache  filelist.txt
